analysis/low-level-api-fir/testData/lazyResolve/errors/propertyDuplicatedContextParameter2.kt
// LANGUAGE: +ContextParameters

context(c: Int)
context(c<caret>: String)
val foo get() = 0
